# rule_of_blah

./: .gitignore  README.md  analyze_judicial_coverage.py  config.py  generate_report.py  prompts.py  pyproject.toml
results/: cnn_analysis_report.txt  cnn_final_results.json  cnn_report.html  cnn_stage1_results.json  cnn_stage2_results.json
scripts/: analyze_judicial_coverage.py  config.py  discover_patterns.py  filter_data.py  generate_report.py  judicial_filter.ipynb  prompts.py
